[gd_scene load_steps=4 format=3 uid="uid://bd588faxi0bvq"]

[ext_resource type="Script" uid="uid://dck7nw58j3csp" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="PackedScene" uid="uid://bh7tponqrw223" path="res://Scenes/barbarian_animated.tscn" id="2_6t5aa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jjvhh"]
radius = 0.7
height = 2.5756836

[node name="player" type="CharacterBody3D"]
transform = Transform3D(-3.278354e-08, 0, -0.75, 0, 0.75, 0, 0.75, 0, -3.278354e-08, 0, 0, 0)
script = ExtResource("1_cvnsp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
shape = SubResource("CapsuleShape3D_jjvhh")
debug_color = Color(0.95686275, 0, 0.5372549, 1)

[node name="Barbarian" parent="." instance=ExtResource("2_6t5aa")]
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 0, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.90258527, 0.43051112, 0, -0.43051112, 0.90258527, 0, 0, 0)
visible = false
layers = 1023
omni_range = 3.654
omni_attenuation = 0.5

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="FP_Camera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1.3333334, 1.110223e-16, -1.4210855e-14, 0, 1.3332757, 0.012403294, 1.4210855e-14, -0.012403294, 1.3332757, 1.8412507e-09, 0.57385063, -1.0545073)
fov = 100.0

[node name="TP_Camera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1.3333334, 0, 0, 0, 1.3091285, 0.2529042, 0, -0.2529042, 1.3091285, 1.0913391, 0.77513504, 1.1857815)
fov = 90.0

[node name="FV_Camera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1.3296894, 5.301236e-09, -0.09850976, -0.026012309, 1.2860091, 0.35111544, 0.095013335, 0.3520777, -1.2824943, 0, 0.6603451, -2.839742)
fov = 90.0

[node name="GroundRaycast" type="RayCast3D" parent="."]
target_position = Vector3(0, -2, 0)

[node name="HealthStamina" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="HealthStamina"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DamageFlash" type="ColorRect" parent="HealthStamina"]
offset_top = 53.0
offset_right = 5296.0
offset_bottom = 2732.0
mouse_filter = 2
color = Color(0.36098683, 0.48335028, 0.9882626, 0.05490196)

[node name="WaterOverlay" type="ColorRect" parent="HealthStamina"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14509805, 0.28627452, 0.78039217, 0.47058824)

[node name="HealthBar" type="ProgressBar" parent="HealthStamina"]
offset_left = 136.0
offset_top = 47.0
offset_right = 483.0
offset_bottom = 101.0

[node name="StaminaBar" type="ProgressBar" parent="HealthStamina"]
offset_left = 138.0
offset_top = 142.0
offset_right = 481.0
offset_bottom = 198.0

[node name="HealthLabel" type="Label" parent="HealthStamina"]
offset_left = 44.0
offset_top = 61.0
offset_right = 84.0
offset_bottom = 84.0

[node name="StaminaLabel" type="Label" parent="HealthStamina"]
offset_left = 46.0
offset_top = 157.0
offset_right = 86.0
offset_bottom = 180.0
